--- a/ImageToText/Base.lproj/Main.storyboard
+++ b/ImageToText/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,7 +24,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="assessment_3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ImageToText" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -56,7 +56,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ex totam praesentium incidunt aut." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Og0-eH-13J">
-                                <rect key="frame" x="45.5" y="721" width="219" height="16.5"/>
+                                <rect key="frame" x="45.5" y="721" width="221" height="16.5"/>
                                 <fontDescription key="fontDescription" name="Raleway-Light" family="Raleway" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -115,7 +115,7 @@
         <!--Select PhotoVC-->
         <scene sceneID="r6Q-9m-j2A">
             <objects>
-                <viewController id="WMI-Yn-qjC" customClass="SelectPhotoVC" customModule="assessment_3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="WMI-Yn-qjC" customClass="SelectPhotoVC" customModule="ImageToText" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="AFw-gd-5HO">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -213,7 +213,7 @@
         <!--Second View Controller-->
         <scene sceneID="pbl-6G-xtD">
             <objects>
-                <viewController id="8bl-gE-heT" customClass="SecondViewController" customModule="assessment_3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="8bl-gE-heT" customClass="SecondViewController" customModule="ImageToText" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="RIg-AG-mM4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -263,7 +263,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ex totam praesentium incidunt aut." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bao-hA-y4l">
-                                <rect key="frame" x="44.5" y="171" width="219" height="21"/>
+                                <rect key="frame" x="44.5" y="171" width="221" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="fMO-NY-wzH"/>
                                 </constraints>
@@ -328,7 +328,7 @@
         <!--Thirt View Controller-->
         <scene sceneID="0g9-nB-ftN">
             <objects>
-                <viewController id="pGU-x2-NqC" customClass="ThirtViewController" customModule="assessment_3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="pGU-x2-NqC" customClass="ThirtViewController" customModule="ImageToText" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="GDC-ka-5Lq">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -442,7 +442,7 @@
         <!--See PhotoVC-->
         <scene sceneID="fHI-I6-d3F">
             <objects>
-                <viewController id="tIh-fg-7aH" customClass="SeePhotoVC" customModule="assessment_3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="tIh-fg-7aH" customClass="SeePhotoVC" customModule="ImageToText" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OwN-Vc-McU">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -467,7 +467,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zqq-DQ-xm7">
                                 <rect key="frame" x="66" y="343" width="283" height="263"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vQX-XM-rTF">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vQX-XM-rTF">
                                         <rect key="frame" x="0.0" y="0.0" width="283" height="263"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="283" id="76q-ym-TFp"/>
@@ -531,7 +531,7 @@
         <!--Converted TextVC-->
         <scene sceneID="jmY-ea-QoV">
             <objects>
-                <viewController id="bkr-Dk-FsI" customClass="ConvertedTextVC" customModule="assessment_3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="bkr-Dk-FsI" customClass="ConvertedTextVC" customModule="ImageToText" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="vUN-UM-x6x">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
